@@ -369,7 +369,7 @@ gp_cofflink_merge_sections(gp_object_type *object)
   gp_section_type *second;
   gp_symbol_type  *symbol = NULL;
   gp_reloc_type   *relocation = NULL;
-  unsigned int line_offset;
+  unsigned int section_org;
   unsigned char data;
 
   first = object->sections;
@@ -398,9 +398,6 @@ gp_cofflink_merge_sections(gp_object_type *object)
         relocation = relocation->next;
       }
 
-      /* Update the section symbol for the section symbol */
-      second->symbol->value = first->size;
-
       /* Copy the section data */
       if(_has_data(second)) {
 	unsigned int last = second->size;
@@ -414,10 +411,13 @@ gp_cofflink_merge_sections(gp_object_type *object)
         }
       }
 
-      line_offset = first->size;
-
       /* Update the line number offsets */
-      _update_line_numbers(second->line_numbers, line_offset);
+      _update_line_numbers(second->line_numbers, first->size);
+
+      if (first->flags & (STYP_TEXT|STYP_DATA_ROM))
+	section_org = gp_processor_byte_to_org(object->class, first->size);
+      else
+	section_org = first->size;
 
       /* Update the symbol table */
       symbol = object->symbols;
@@ -425,7 +425,7 @@ gp_cofflink_merge_sections(gp_object_type *object)
         if ((symbol->section_number > 0) &&  
             (symbol->section == second)) {
           symbol->section = first;
-          symbol->value += line_offset;
+          symbol->value += section_org;
         }
         symbol = symbol->next;
       }
